<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:scrollbars="none"
    android:background="@color/white"
    tools:context=".defaultActivity.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <view
                    android:id="@+id/view"
                    class="androidx.viewpager.widget.ViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/round_bg" />

                <view
                    android:id="@+id/view2"
                    class="androidx.viewpager.widget.ViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/design" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/register_here"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="122dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/logo"
                    android:contentDescription="@string/todo" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/Firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_button"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="#100F0F"
                android:autofillHints="" />

            <EditText
                android:id="@+id/Lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_button"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="#100F0F"
                android:autofillHints="" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_button"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 1234567890"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/enter_user_name"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="#100F0F"
                android:autofillHints="" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_button"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="#100F0F"
                android:autofillHints="" />

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp">

                <Spinner
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting_button"
                    android:paddingStart="50dp"
                    android:textAlignment="gravity"
                    android:textColorHint="#100F0F"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="30dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_organization"
                    android:contentDescription="@string/todo" />

            </FrameLayout>

            <CheckBox
                android:id="@+id/org"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_new_organization"
                android:visibility="gone" />

            <EditText
                android:id="@+id/classname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_button"
                android:drawablePadding="20dp"
                android:hint="@string/class_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:visibility="gone"
                android:textColorHint="#100F0F"
                android:autofillHints="" />

            <EditText
                android:id="@+id/organization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_button"
                android:drawableStart="@drawable/ic_organization"
                android:drawablePadding="20dp"
                android:hint="@string/org"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="#100F0F"
                android:autofillHints="" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_button"
                android:drawableStart="@drawable/ic_num"
                android:drawablePadding="20dp"
                android:ems="10"
                android:maxLength="10"
                android:hint="@string/mobile"
                android:inputType="number"
                android:padding="10dp"
                android:textColorHint="#100F0F"
                android:autofillHints="" />

            <EditText
                android:id="@+id/Enrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_button"
                android:drawableStart="@drawable/ic_id"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/unique_id"
                android:inputType="number"
                android:padding="10dp"
                android:maxLength="12"
                android:textColorHint="#100F0F"
                android:autofillHints="" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting_button"
                    android:drawableStart="@drawable/ic_pass"
                    android:drawablePadding="20dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:maxLength="10"
                    android:textColorHint="#100F0F"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/show_pass1"
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_visibility"
                    android:onClick="ShowHidePass3" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/Repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting_button"
                    android:drawableStart="@drawable/ic_pass"
                    android:drawablePadding="20dp"
                    android:ems="10"
                    android:hint="@string/repassword"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:maxLength="10"
                    android:textColorHint="#100F0F"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/show_pass2"
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_visibility"
                    android:onClick="ShowHidePass4" />
            </FrameLayout>

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="true"
                android:text="@string/checkbox"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>